istio-practice/knative-serving.yaml
# https://bluehorn07.github.io/2024/06/22/install-knative-serving/
apiVersion: v1
kind: Namespace
metadata:
  name: knative-serving
